# esp32-freertos-tutorial

./: README.md
hello-gpio/: CMakeLists.txt
hello-gpio/main/: CMakeLists.txt  hello-gpio.c
hello-lcd/: CMakeLists.txt
hello-lcd-lvgl/: CMakeLists.txt  sdkconfig.defaults
hello-lcd-lvgl/main/: CMakeLists.txt  hardware.h  hello-lcd-lvgl.c  idf_component.yml  lcd.c
hello-lcd/main/: CMakeLists.txt  fontx.c  fontx.h  hello-lcd.c  st7735.c  st7735.h
hello-led-strip/: .gitignore  CMakeLists.txt
hello-led-strip/main/: CMakeLists.txt  hello-led-strip.c
hello-lvgl/: .gitignore  CMakeLists.txt
hello-lvgl/main/: CMakeLists.txt  hello-lvgl.c  idf_component.yml  lcd.c  lcd.h  touch.c  touch.h
hello-sd-spi/: CMakeLists.txt
hello-sd-spi/main/: CMakeLists.txt  hello-sd-spi.c
hello-spiffs/: CMakeLists.txt
hello-spiffs/data/: test.txt
hello-spiffs/main/: CMakeLists.txt  hello-spiffs.c
hello-world/main/: hello-world.c
